welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: value vuBiscuit is not a member of object Boolean
  Boolean vuBiscuit=false
          ^Program:6: error: not found: value vuBiscuit
      vuBiscuit=true
      ^Program:8: error: not found: value vuBiscuit
  return vuBiscuit
         ^